# agent-manager

./: Makefile
.github/: release-config.json
.github/workflows/: amctl-pr-checks.yaml  cli-codegen-check.yaml  dependency-validation.yml  e2e.yaml  instrumentation-matrix-manual.yaml  instrumentation-matrix-nightly.yaml  instrumentation-matrix-pr.yaml  publish-core-ui-npm.yml  python_instrumentation_image_release.yaml  release.yml  traceloop-release-watch.yaml
agent-manager-service/: Makefile
agent-manager-service/api/: agent_apikey_routes.go  agent_build_options_routes.go  agent_routes.go  app.go  config_handler.go  config_handler_test.go  identity_routes.go
agent-manager-service/app/: app.go
agent-manager-service/catalog/: provider_prefixes.go
agent-manager-service/config/: config.go  config_loader.go
agent-manager-service/constants/: roles.go
agent-manager-service/controllers/: agent_apikey_controller.go  agent_controller.go  gateway_controller.go  gateway_internal_controller.go  identity_controller.go  identity_controller_test.go  monitor_scores_controller.go  monitor_scores_publisher_controller.go  websocket_controller.go
agent-manager-service/db_migrations/: 007_create_agent_configs.go  011_create_api_keys.go  016_agent_kinds.go  017_add_instrumentation_version_to_agent_configs.go  018_backfill_instrumentation_version.go  018_hard_delete_agent_kinds.go  019_add_agent_api_key_config.go  020_hard_delete_agent_kinds.go  021_add_cors_allow_origins.go  021_add_eventhub_tables.go  022_add_cors_allow_origins.go  migration_list.go
agent-manager-service/docs/: api_v1_openapi.yaml
agent-manager-service/eventhub/: sqlbackend.go  topic.go  types.go
agent-manager-service/instrumentation/: baseline.go  baseline.json  catalog.go  catalog_test.go
agent-manager-service/mcp/: README.md  server.go  setup.go
agent-manager-service/models/: agent.go  agent_config.go  agent_kind.go  apikey.go  artifact.go  build_deployment.go
agent-manager-service/repositories/: agent_config_repository.go  agent_env_config_variable_repository.go  agent_kind_repository.go  apikey_repository.go  catalog_repository.go  evaluation_score_repository.go  gateway_repository.go
agent-manager-service/scripts/: gen_client.sh  gen_instrumentation_baseline.go  generate-builtin-evaluators.sh
cli/: AGENTS.md  go.mod
console/: Dockerfile  Dockerfile.dev  Makefile  dev-start.sh  env.example  rush.json
deployments/: docker-compose.yml  k3d-local-config.yaml
documentation/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  versions.json
evaluation-job/: Dockerfile.dev  main.py  pyproject.toml  requirements.txt
libs/amp-evaluation/: README.md  pyproject.toml
libs/amp-evaluation/samples/07-llm-as-judge/: README.md  evaluators.py  requirements.txt  run.py
libs/amp-evaluation/src/amp_evaluation/: config.py  models.py
libs/amp-evaluation/src/amp_evaluation/evaluators/: base.py
libs/amp-evaluation/src/amp_evaluation/evaluators/builtin/: __init__.py  llm_judge.py
libs/amp-evaluation/tests/: test_llm_as_judge.py  test_llm_as_judge_builtins.py  test_llm_judge_gateway.py
libs/amp-instrumentation/: README.md  pyproject.toml
libs/amp-instrumentation/src/amp_instrumentation/: __init__.py  otel.py
libs/amp-instrumentation/tests/: test_otel.py
python-instrumentation-provider/: Dockerfile  Makefile  RELEASING.md  requirements.txt
scripts/: build-amctl.sh  check-cassettes.py  check-matrix-manifest.py
test/e2e/: .gitignore
traces-observer-service/: go.mod  main.go
(+548 files in other folders)
