[project]
name = "amp-instrumentation"
version = "0.0.0-dev"
description = "Automatic instrumentation for Python agent applications, monitored via WSO2 Agent Management Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "WSO2", email = "hansi@wso2.org" }
]
maintainers = [
    { name = "WSO2", email = "hansi@wso2.org" }
]
# traceloop-sdk is pinned to a specific version (not a range): an installed
# amp-instrumentation version maps to exactly one OpenLLMetry version. Bumping it
# is a new amp-instrumentation release. See the AMP instrumentation version mapping.
dependencies = [
    "traceloop-sdk==0.60.0",
     # Pin wrapt below 2.0: wrapt 2.x removed the `module=` kwarg on
    # wrap_function_wrapper that opentelemetry-instrumentation-* 0.60.0 still calls.
    "wrapt<2.0.0",
    "httpx>=0.25.0",
    # Imported directly by amp_instrumentation.otel.init_otel. Left unconstrained
    # on purpose: their version is determined by traceloop-sdk==0.60.0, which
    # already requires both (kept here only to declare the direct import).
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.urls]
Repository = "https://github.com/wso2/agent-manager"

[project.scripts]
amp-instrument = "amp_instrumentation.cli.main:cli"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/amp_instrumentation"]
